# salesforce-mcp

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/salesforce_mcp/: __main__.py  auth.py  client.py  server.py
