[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salesforce-mcp"
version = "0.1.0"
description = "Salesforce MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "simple-salesforce>=1.12.0",
]

[project.scripts]
salesforce-mcp = "salesforce_mcp.__main__:main"
